[jOOQ/jOOQ#7863] Link Oracle %ROWTYPE references to their corresponding table types